# traductorjjgc

./: README.md  pyproject.toml
tests/: test_traductorjjgc.py
traductorjjgc/: __main__.py
traductorjjgc/mathematics/: basico.py
