[tool.poetry]
name = "traductorjjgc"
version = "0.2.1"
description = "Traductor de palabras"
authors = ["Juan Gahona <gahonajuanjo@gmail.com>"]
keywords = ["traductor", "translator"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Scoowy/traductorjjgc"
repository = "https://github.com/Scoowy/traductorjjgc"
include = ["LICENSE"]

[tool.poetry.scripts]
traductorjjgc = "traductorjjgc.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
translate = "3.5.0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
twine = "^3.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
